--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -36,3 +36,14 @@ jobs:
     # Runs a single command using the runners shell
     - name: Compile and run tests on robot code
       run: ./gradlew build
+
+  jobs:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./2021-Infinite-Recharge
+    steps:
+     - name: Google Java Format
+       uses: axel-op/googlejavaformat-action@3.5.0
+
