--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -37,13 +37,13 @@ jobs:
     - name: Compile and run tests on robot code
       run: ./gradlew build
 
-  jobs:
+  formatting:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./2021-Infinite-Recharge
     steps:
-     - name: Google Java Format
-       uses: axel-op/googlejavaformat-action@3.5.0
+      - uses: actions/checkout@v2 # v2 minimum required
+      - uses: axel-op/googlejavaformat-action@v3
+        with:
+          args: "--skip-sorting-imports --replace"
+          # Recommended if you use MacOS:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
 
